# RAG-research-paper-curator

./: .env.example  .gitignore  .pre-commit-config.yaml  compose.yml  gradio_launcher.py  pyproject.toml
.github/workflows/: ci.yml
src/: arxiv_client.py  config.py  dependencies.py  exceptions.py  gradio_app.py  main.py  paper.py
src/db/: database.py  factory.py
src/db/interfaces/: base.py  postgresql.py
src/models/: paper.py
src/repository/: paper_repository.py
src/routers/: health.py  papers.py  search.py
src/schemas/api/: health.py  search.py
src/schemas/arxiv/: paper.py
src/schemas/embeddings/: jina.py
src/schemas/indexing/: chunk.py
src/schemas/pdf_parser/: models.py
src/services/: metadata_fetcher.py
src/services/arxiv/: arxiv_client.py  factory.py
src/services/embeddings/: factory.py  jina_client.py
src/services/indexing/: text_chunker.py
src/services/opensearch/: client.py  factory.py  index_config.py  query_builder.py
src/services/pdf_parser/: docling.py  parser.py
tests/unit/: test_config.py
