[project]
name = "arxiv-paper-curator-my"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.55.1",
    "gradio>=5.47.0",
    "httpx>=0.28.1",
    "numpy<2.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.10.1",
    "torch==2.2.2",
    "torchvision==0.17.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
