[project]
name = "arxiv-paper-curator-my"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.17.1",
    "docling>=2.55.1",
    "fastapi>=0.117.1",
    "gradio>=5.47.0",
    "httpx>=0.28.1",
    "numpy<2.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.44",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.13.1",
]

[tool.ruff]
target-version = "py312"
line-length = 150
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle (style errors)
    "F",         # pyflakes (unused imports, etc.)
    "I",         # isort (import sorting)
    "B",         # bugbear (common bugs)
    "ASYNC",     # async mistakes
 ]
[tool.ruff.lint.per-file-ignores]
"gradio_launcher.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Start lenient, enable later
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "torch.*",
    "torchvision.*",
    "gradio.*",
    "aiofiles",
    "pypdfium2",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
